# proxy-canister

./: Cargo.toml  README.md  dfx.json
proxy/: Cargo.toml  proxy.did
proxy-canister/: Cargo.toml  proxy-canister.did
proxy/src/: lib.rs
