[workspace]
members = ["proxy"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.1"
edition = "2024"
authors = ["DFINITY Stiftung <sdk@dfinity.org>"]
license = "Apache-2.0"
repository = "https://github.com/dfinity/proxy-canister"
publish = false                                          # don't publish to crates.io

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.18"
serde = "1"
serde_bytes = "0.11"
